suil (0.10.25) unstable; urgency=medium

  * Address new warnings in clang and clang-tidy 21

 -- David Robillard <d@drobilla.net>  Sat, 20 Dec 2025 22:28:25 +0000

suil (0.10.24) stable; urgency=medium

  * Add header warnings test
  * Avoid over-use of yielding meson options

 -- David Robillard <d@drobilla.net>  Wed, 12 Nov 2025 19:20:37 +0000

suil (0.10.22) stable; urgency=medium

  * Add support for X11 in Qt6
  * Fix library current_version on MacOS
  * Monitor size hints and window resizes for X11 in Gtk3

 -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 13:58:40 +0000

suil (0.10.20) stable; urgency=medium

  * Allow SUIL_API to be defined by the user
  * Fix dependencies in pkg-config file
  * Only check for Gtk Quartz support on MacOS
  * Override pkg-config dependency within meson
  * Remove Gtk in Qt and Qt in Gtk wrappers
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:11:10 +0000

suil (0.10.18) stable; urgency=medium

  * Add project metadata
  * Adopt REUSE machine-readable licensing standard
  * Fix MacOS build when Gtk3 and Qt5 are present without X11
  * Fix opening wrapped UIs multiple times in Gtk

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:29:12 +0000

suil (0.10.16) stable; urgency=medium

  * Fix wrapper module installation path

 -- David Robillard <d@drobilla.net>  Fri, 12 Aug 2022 22:17:10 +0000

suil (0.10.14) stable; urgency=medium

  * Fix MacOS build
  * Fix documentation install path
  * Remove dead Qt4 support code
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:14:05 +0000

suil (0.10.12) stable; urgency=medium

  * Fix build issues with newer toolchains
  * Fix some compiler warnings
  * Remove Qt4 support

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 01:43:47 +0000

suil (0.10.10) stable; urgency=medium
