@@ -1,8 +1,9 @@
 suil (0.10.25) unstable; urgency=medium
 
   * Address new warnings in clang and clang-tidy 21
+  * Fix documentation build without sphinx_lv2_theme
 
- -- David Robillard <d@drobilla.net>  Sat, 20 Dec 2025 22:28:25 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 07 Feb 2026 22:54:20 +0000
 
 suil (0.10.24) stable; urgency=medium
 
